<resources>
    <string name="app_name">My Movies</string>
    <string name="action_settings">Settings</string>
    <string name="no_movies_text">There is no movies</string>
    <string name="no_internet_connection">You don\'t have internet connection</string>
    <string name="retry">RETRY</string>
    <string name="type_movie_name">Type a movie name</string>
    <string name="text_input_layout_hint">Movie Name</string>
    <string name="search_button">Search</string>
    <string name="movie_inserted">Movie already inserted</string>
    <string name="movie_not_found">Movie not found</string>
    <string name="no_image_available">N/A</string>
    <string name="movie_inserted_with_success">Movie inserted with success!</string>
    <string name="release_date">Release Date</string>
    <string name="director">Director</string>
    <string name="actors">Actors</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
